--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="textColorA">#333333</color>
+    <color name="textColorB">#666666</color>
+    <color name="textColorC">#999999</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
