--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,4 +22,13 @@
 
     <include layout="@layout/content_main" />
 
+    <FrameLayout
+        android:id="@+id/frame_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <include layout="@layout/include_play_bottom" />
+    </FrameLayout>
+
 </android.support.design.widget.CoordinatorLayout>
