--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,15 +8,15 @@
             android:id="@+id/nav_camera"
             android:checked="true"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/all_songs" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="@string/my_sheets" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/recently" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
