--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -19,7 +19,7 @@
             app:popupTheme="@style/AppTheme.AppBarOverlay">
 
             <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
-                android:id="@+id/bnv"
+                android:id="@id/bottomNavigationViewEx"
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -31,7 +31,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
