--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,11 @@
     <color name="colorPrimaryDark">#a21604</color>
     <color name="colorAccent">#d81e06</color>
 
-    <color name="textColorA">#333333</color>
+    <color name="textColorA">#000000</color>
     <color name="textColorB">#666666</color>
     <color name="textColorC">#999999</color>
+
+    <color name="line">#cccccc</color>
 
     <color name="white">#FFFFFF</color>
     <color name="grey">#DBDBDB</color>
