--- a/app/src/main/res/layout/include_play_bottom.xml
+++ b/app/src/main/res/layout/include_play_bottom.xml
@@ -2,12 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
+    android:layout_centerVertical="true"
     android:background="@color/white"
-    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="-10dp"
+        android:layout_marginRight="-10dp"
+        android:background="@color/line" />
 
     <ImageView
         android:id="@+id/iv_cover"
@@ -22,7 +30,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/iv_cover"
         android:textColor="@color/textColorA"
         android:textSize="@dimen/text_normal"
@@ -39,10 +47,11 @@
         android:textSize="@dimen/text_small"
         tools:text="周杰伦" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.wangsz.libs.widgets.PlayView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:src="@android:drawable/ic_media_play" />
+        android:background="@color/white" />
+
 </RelativeLayout>
