--- a/app/src/main/res/layout/include_play_bottom.xml
+++ b/app/src/main/res/layout/include_play_bottom.xml
@@ -48,6 +48,7 @@
         tools:text="周杰伦" />
 
     <com.wangsz.libs.widgets.PlayView
+        android:id="@+id/playView"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
