--- a/app/src/main/res/layout/fragment_local_musics.xml
+++ b/app/src/main/res/layout/fragment_local_musics.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/frament_content"
-        layout="@layout/fragment_tab"
+        layout="@layout/fragment_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
